// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vurderingArtikkel13_2b > snapshot test dersom Norge er valgt 1`] = `

<div>
  <div class="vurderingArtikkel13_2b">
    <h1 class="stegvelgertittel aksel-heading aksel-heading--medium">
      Vurdering av artikkel 13 nr. 2 bokstav b
    </h1>
    <fieldset
      role="radiogroup"
      aria-labelledby="333"
      class="aksel-radio-group aksel-radio-group--small aksel-fieldset aksel-fieldset--small"
    >
      <legend
        id="333"
        class="aksel-fieldset__legend aksel-label aksel-label--small"
      >
        I hvilket land har virksomheten sitt interessesenter?
      </legend>
      <div class="aksel-radio-buttons">
        <div class="aksel-radio aksel-radio--small">
          <input
            id="333"
            class="aksel-radio__input"
            data-standalone="false"
            type="radio"
            value="NORGE"
            name="333"
          >
          <label
            for="333"
            class="aksel-radio__label aksel-body-short aksel-body-short--small"
          >
            Norge
          </label>
        </div>
        <div class="aksel-radio aksel-radio--small">
          <input
            id="333"
            class="aksel-radio__input"
            data-standalone="false"
            type="radio"
            value="ANNET"
            name="333"
          >
          <label
            for="333"
            class="aksel-radio__label aksel-body-short aksel-body-short--small"
          >
            Annet
          </label>
        </div>
      </div>
      <div
        id="333"
        aria-relevant="additions removals"
        aria-live="polite"
        class="aksel-fieldset__error"
      >
      </div>
    </fieldset>
    <div class="stegKnapper">
      <button
        data-variant="primary"
        class="stegKnapper__bekreft aksel-button aksel-button--small"
      >
        <span class="aksel-label aksel-label--small">
          Bekreft og fortsett
        </span>
      </button>
      <button
        data-variant="tertiary"
        class="stegKnapper__tilbake aksel-button aksel-button--small"
      >
        <span class="aksel-button__icon">
          <svg
            width="16"
            height="14"
            viewbox="0 0 16 14"
            fill="none"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              fill-rule="evenodd"
              clip-rule="evenodd"
              d="M16 7.66732L2.47 7.66732L7.33333 12.6976L6.41697 13.6673L0 7.00065L6.41697 0.333984L7.33333 1.30368L2.47 6.33398L16 6.33398V7.66732Z"
              fill="#0067C5"
            >
            </path>
          </svg>
        </span>
        <span class="aksel-label aksel-label--small">
          Tilbake
        </span>
      </button>
    </div>
  </div>
</div>

`;

exports[`vurderingArtikkel13_2b > snapshot test dersom Norge ikke er valgt 1`] = `

<div>
  <div class="vurderingArtikkel13_2b">
    <h1 class="stegvelgertittel aksel-heading aksel-heading--medium">
      Vurdering av artikkel 13 nr. 2 bokstav b
    </h1>
    <fieldset
      role="radiogroup"
      aria-labelledby="333"
      class="aksel-radio-group aksel-radio-group--small aksel-fieldset aksel-fieldset--small"
    >
      <legend
        id="333"
        class="aksel-fieldset__legend aksel-label aksel-label--small"
      >
        I hvilket land har virksomheten sitt interessesenter?
      </legend>
      <div class="aksel-radio-buttons">
        <div class="aksel-radio aksel-radio--small">
          <input
            id="333"
            class="aksel-radio__input"
            data-standalone="false"
            type="radio"
            value="NORGE"
            name="333"
          >
          <label
            for="333"
            class="aksel-radio__label aksel-body-short aksel-body-short--small"
          >
            Norge
          </label>
        </div>
        <div class="aksel-radio aksel-radio--small">
          <input
            id="333"
            class="aksel-radio__input"
            data-standalone="false"
            type="radio"
            value="ANNET"
            name="333"
          >
          <label
            for="333"
            class="aksel-radio__label aksel-body-short aksel-body-short--small"
          >
            Annet
          </label>
        </div>
      </div>
      <div
        id="333"
        aria-relevant="additions removals"
        aria-live="polite"
        class="aksel-fieldset__error"
      >
      </div>
    </fieldset>
    <div class="row">
      <div class="col col-xs-8 col-md-6 col-lg-4">
        <div>
          <div class="melosys-textfield landliste__linje__input aksel-form-field aksel-form-field--small">
            <label
              for="333"
              class="aksel-form-field__label aksel-label aksel-label--small"
            >
              Velg land:
            </label>
            <input
              list="333"
              bredde="fullbredde"
              id="333"
              class="aksel-text-field__input aksel-body-short aksel-body-short--small"
              type="text"
              value="Kypros (CY)"
            >
            <div
              class="aksel-form-field__error"
              id="333"
              aria-relevant="additions removals"
              aria-live="polite"
            >
            </div>
          </div>
          <div class="landliste__dataliste">
            <datalist id="333">
              <option
                value="Belgia (BE)"
                label="Belgia (BE)"
              >
              </option>
              <option
                value="Bulgaria (BG)"
                label="Bulgaria (BG)"
              >
              </option>
              <option
                value="Danmark (DK)"
                label="Danmark (DK)"
              >
              </option>
              <option
                value="Estland (EE)"
                label="Estland (EE)"
              >
              </option>
              <option
                value="Finland (FI)"
                label="Finland (FI)"
              >
              </option>
              <option
                value="Frankrike (FR)"
                label="Frankrike (FR)"
              >
              </option>
              <option
                value="Færøyene (FO)"
                label="Færøyene (FO)"
              >
              </option>
              <option
                value="Grønland (GL)"
                label="Grønland (GL)"
              >
              </option>
              <option
                value="Hellas (GR)"
                label="Hellas (GR)"
              >
              </option>
              <option
                value="Irland (IE)"
                label="Irland (IE)"
              >
              </option>
              <option
                value="Island (IS)"
                label="Island (IS)"
              >
              </option>
              <option
                value="Italia (IT)"
                label="Italia (IT)"
              >
              </option>
              <option
                value="Kroatia (HR)"
                label="Kroatia (HR)"
              >
              </option>
              <option
                value="Kypros (CY)"
                label="Kypros (CY)"
              >
              </option>
              <option
                value="Latvia (LV)"
                label="Latvia (LV)"
              >
              </option>
              <option
                value="Liechtenstein (LI)"
                label="Liechtenstein (LI)"
              >
              </option>
              <option
                value="Litauen (LT)"
                label="Litauen (LT)"
              >
              </option>
              <option
                value="Luxembourg (LU)"
                label="Luxembourg (LU)"
              >
              </option>
              <option
                value="Malta (MT)"
                label="Malta (MT)"
              >
              </option>
              <option
                value="Nederland (NL)"
                label="Nederland (NL)"
              >
              </option>
              <option
                value="Norge (NO)"
                label="Norge (NO)"
              >
              </option>
              <option
                value="Polen (PL)"
                label="Polen (PL)"
              >
              </option>
              <option
                value="Portugal (PT)"
                label="Portugal (PT)"
              >
              </option>
              <option
                value="Romania (RO)"
                label="Romania (RO)"
              >
              </option>
              <option
                value="Slovakia (SK)"
                label="Slovakia (SK)"
              >
              </option>
              <option
                value="Slovenia (SI)"
                label="Slovenia (SI)"
              >
              </option>
              <option
                value="Spania (ES)"
                label="Spania (ES)"
              >
              </option>
              <option
                value="Storbritannia (GB)"
                label="Storbritannia (GB)"
              >
              </option>
              <option
                value="Svalbard og Jan Mayen (SJ)"
                label="Svalbard og Jan Mayen (SJ)"
              >
              </option>
              <option
                value="Sveits (CH)"
                label="Sveits (CH)"
              >
              </option>
              <option
                value="Sverige (SE)"
                label="Sverige (SE)"
              >
              </option>
              <option
                value="Tsjekkia (CZ)"
                label="Tsjekkia (CZ)"
              >
              </option>
              <option
                value="Tyskland (DE)"
                label="Tyskland (DE)"
              >
              </option>
              <option
                value="Ungarn (HU)"
                label="Ungarn (HU)"
              >
              </option>
              <option
                value="Østerrike (AT)"
                label="Østerrike (AT)"
              >
              </option>
              <option
                value="Åland (AX)"
                label="Åland (AX)"
              >
              </option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
    <div class="stegKnapper">
      <button
        data-variant="primary"
        class="stegKnapper__bekreft aksel-button aksel-button--small"
      >
        <span class="aksel-label aksel-label--small">
          Bekreft og fortsett
        </span>
      </button>
      <button
        data-variant="tertiary"
        class="stegKnapper__tilbake aksel-button aksel-button--small"
      >
        <span class="aksel-button__icon">
          <svg
            width="16"
            height="14"
            viewbox="0 0 16 14"
            fill="none"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              fill-rule="evenodd"
              clip-rule="evenodd"
              d="M16 7.66732L2.47 7.66732L7.33333 12.6976L6.41697 13.6673L0 7.00065L6.41697 0.333984L7.33333 1.30368L2.47 6.33398L16 6.33398V7.66732Z"
              fill="#0067C5"
            >
            </path>
          </svg>
        </span>
        <span class="aksel-label aksel-label--small">
          Tilbake
        </span>
      </button>
    </div>
  </div>
</div>

`;
